fix: scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
     border: 1px black solid;
     height: 100vh;
     background-color: #f5f5f5;
+
+    
+    /* Disables scrolling */
+    touch-action: none;
+    overscroll-behavior: contain;
 }
 
 .softwareSystem {
